--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,8 +68,7 @@ services:
         image: eclipse-mosquitto
         restart: unless-stopped
         ports:
-            - "1883:1883"
-            - "9001:9001"
+            - "${FORWARD_MQTT_PORT:-1883}:1883"
         volumes:
             - ./mosquitto:/etc/mosquitto
             - ./mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
