--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
         "postcss": "^8.4.47",
         "tailwindcss": "^3.4.13",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@inertiajs/inertia-react": "^0.8.1",
+        "@inertiajs/react": "^1.2.0",
+        "@vitejs/plugin-react": "^4.3.3",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     }
 }
