--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,9 @@ services:
             - sail
         depends_on:
             mysql:
-                condition: service_healthy
-            - redis
-            - mosquitto
+                condition: service_completed_successfully
+            redis:
+            mosquitto:
     mysql:
         image: 'mysql/mysql-server:8.0'
         #        ports:
