--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,9 @@ services:
             mysql:
                 condition: service_completed_successfully
             redis:
+                condition: service_completed_successfully
             mosquitto:
+                condition: service_completed_successfully
     mysql:
         image: 'mysql/mysql-server:8.0'
         #        ports:
