--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,9 @@ services:
             - sail
         depends_on:
             mysql:
-                condition: service_completed_successfully
+                condition: service_healthy
             redis:
-                condition: service_completed_successfully
-            mosquitto:
-                condition: service_completed_successfully
+                condition: service_healthy
     mysql:
         image: 'mysql/mysql-server:8.0'
         #        ports:
